// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`card renders without crashing 1`] = `
<Connect(Card)
  id="dining"
  title="Dining"
>
  <View
    style={
      Object {
        "top": -1,
      }
    }
  >
    <View>
      <DataListView
        card={false}
        data={
          Array [
            Object {
              "address": "9500 Gilman Drive 0120, La Jolla, CA 92093-0120",
              "coords": Object {
                "lat": "32.8754115",
                "lon": "-117.242701",
              },
              "description": "This has an example of special hours.",
              "id": "01",
              "images": Array [
                Object {
                  "caption": "Inside Pines",
                  "large": "https://hdh2.ucsd.edu/_images/pines/inside1Large.png",
                  "small": "https://hdh2.ucsd.edu/_images/pines/inside1Small.png",
                },
                Object {
                  "caption": "Outside Pines",
                  "large": "https://hdh2.ucsd.edu/_images/pines/outsideLarge.png",
                  "small": "https://hdh2.ucsd.edu/_images/pines/outsideSmall.png",
                },
                Object {
                  "caption": "Pasta",
                  "large": "https://hdh2.ucsd.edu/_images/pines/pastaLargeLarge.png",
                  "small": "https://hdh2.ucsd.edu/_images/pines/pastaSmall.png",
                },
                Object {
                  "caption": "Salad Bar",
                  "large": "https://hdh2.ucsd.edu/_images/pines/saladbarLarge.png",
                  "small": "https://hdh2.ucsd.edu/_images/pines/saladbarSmall.png",
                },
                Object {
                  "caption": "Taco Trio",
                  "large": "https://hdh2.ucsd.edu/_images/pines/tacotrioLarge.png",
                  "small": "https://hdh2.ucsd.edu/_images/pines/tacotrioSmall.png",
                },
              ],
              "location": "Muir College ",
              "meals": "breakfast, lunch, dinner",
              "name": "Pines",
              "paymentOptions": Array [
                "Cash",
                "HDH Recharge",
              ],
              "persistentMenu": "false",
              "regularHours": Object {
                "fri": "0730-0900",
                "mon": "0730-2100",
                "sat": "1000-2000",
                "sun": "0800-1100,1900-0100",
                "thu": "0730-2100",
                "tue": "0730-0900,1015-1100",
                "wed": "0730-1800",
              },
              "specialHours": Object {
                "02/26/2018": Object {
                  "hours": "0800-0900,1000-1100,1200-1300,1400-1500",
                  "title": "This is a test of a very long title. One two three four five six seven",
                },
                "12/25/2018": Object {
                  "hours": null,
                  "title": "Christmas",
                },
              },
              "tel": "858.534.5167",
            },
            Object {
              "address": "9500 Gilman Drive 0120, La Jolla, CA 92093-0120",
              "coords": Object {
                "lat": "32.8794045",
                "lon": "-117.242369",
              },
              "description": "This place is open 24 hours except on weekends.",
              "id": "02",
              "images": Array [
                Object {
                  "caption": "Inside Johns Market",
                  "large": "https://hdh2.ucsd.edu/_images/johnsmarket/inside1Large.png",
                  "small": "https://hdh2.ucsd.edu/_images/johnsmarket/inside1Small.png",
                },
                Object {
                  "caption": "Inside Johns Market",
                  "large": "https://hdh2.ucsd.edu/_images/johnsmarket/inside2Large.png",
                  "small": "https://hdh2.ucsd.edu/_images/johnsmarket/inside2Small.png",
                },
                Object {
                  "caption": "Inside Johns Market",
                  "large": "https://hdh2.ucsd.edu/_images/johnsmarket/inside3Large.png",
                  "small": "https://hdh2.ucsd.edu/_images/johnsmarket/inside3Small.png",
                },
                Object {
                  "caption": "Outside Johns Market",
                  "large": "https://hdh2.ucsd.edu/_images/johnsmarket/outside1Large.png",
                  "small": "https://hdh2.ucsd.edu/_images/johnsmarket/outside1Small.png",
                },
              ],
              "location": "Muir College, 1st Floor of Tamarack Apartments",
              "meals": null,
              "name": "Open 24 Hours",
              "paymentOptions": Array [
                "Cash",
                "Check",
              ],
              "persistentMenu": null,
              "regularHours": Object {
                "fri": "0000-2359",
                "mon": "0000-2359",
                "sat": null,
                "sun": null,
                "thu": "0000-2359",
                "tue": "0000-2359",
                "wed": "0000-2358",
              },
              "specialHours": null,
              "tel": "858.822.7729",
            },
          ]
        }
        item="DiningItem"
        rows={3}
        scrollEnabled={false}
      />
      <Touchable
        onPress={[Function]}
      >
        <View
          style={
            Object {
              "borderTopColor": "#EAEAEA",
              "borderTopWidth": 1,
              "padding": 6,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#034262",
                "fontSize": 20,
                "fontWeight": "300",
                "textAlign": "center",
              }
            }
          >
            View All
          </Text>
        </View>
      </Touchable>
    </View>
  </View>
</Connect(Card)>
`;

exports[`container renders without crashing 1`] = `
<withNavigation(DataListCard)
  data={
    Array [
      Object {
        "address": "9500 Gilman Drive 0120, La Jolla, CA 92093-0120",
        "coords": Object {
          "lat": "32.8754115",
          "lon": "-117.242701",
        },
        "description": "This has an example of special hours.",
        "id": "01",
        "images": Array [
          Object {
            "caption": "Inside Pines",
            "large": "https://hdh2.ucsd.edu/_images/pines/inside1Large.png",
            "small": "https://hdh2.ucsd.edu/_images/pines/inside1Small.png",
          },
          Object {
            "caption": "Outside Pines",
            "large": "https://hdh2.ucsd.edu/_images/pines/outsideLarge.png",
            "small": "https://hdh2.ucsd.edu/_images/pines/outsideSmall.png",
          },
          Object {
            "caption": "Pasta",
            "large": "https://hdh2.ucsd.edu/_images/pines/pastaLargeLarge.png",
            "small": "https://hdh2.ucsd.edu/_images/pines/pastaSmall.png",
          },
          Object {
            "caption": "Salad Bar",
            "large": "https://hdh2.ucsd.edu/_images/pines/saladbarLarge.png",
            "small": "https://hdh2.ucsd.edu/_images/pines/saladbarSmall.png",
          },
          Object {
            "caption": "Taco Trio",
            "large": "https://hdh2.ucsd.edu/_images/pines/tacotrioLarge.png",
            "small": "https://hdh2.ucsd.edu/_images/pines/tacotrioSmall.png",
          },
        ],
        "location": "Muir College ",
        "meals": "breakfast, lunch, dinner",
        "name": "Pines",
        "paymentOptions": Array [
          "Cash",
          "HDH Recharge",
        ],
        "persistentMenu": "false",
        "regularHours": Object {
          "fri": "0730-0900",
          "mon": "0730-2100",
          "sat": "1000-2000",
          "sun": "0800-1100,1900-0100",
          "thu": "0730-2100",
          "tue": "0730-0900,1015-1100",
          "wed": "0730-1800",
        },
        "specialHours": Object {
          "02/26/2018": Object {
            "hours": "0800-0900,1000-1100,1200-1300,1400-1500",
            "title": "This is a test of a very long title. One two three four five six seven",
          },
          "12/25/2018": Object {
            "hours": null,
            "title": "Christmas",
          },
        },
        "tel": "858.534.5167",
      },
      Object {
        "address": "9500 Gilman Drive 0120, La Jolla, CA 92093-0120",
        "coords": Object {
          "lat": "32.8794045",
          "lon": "-117.242369",
        },
        "description": "This place is open 24 hours except on weekends.",
        "id": "02",
        "images": Array [
          Object {
            "caption": "Inside Johns Market",
            "large": "https://hdh2.ucsd.edu/_images/johnsmarket/inside1Large.png",
            "small": "https://hdh2.ucsd.edu/_images/johnsmarket/inside1Small.png",
          },
          Object {
            "caption": "Inside Johns Market",
            "large": "https://hdh2.ucsd.edu/_images/johnsmarket/inside2Large.png",
            "small": "https://hdh2.ucsd.edu/_images/johnsmarket/inside2Small.png",
          },
          Object {
            "caption": "Inside Johns Market",
            "large": "https://hdh2.ucsd.edu/_images/johnsmarket/inside3Large.png",
            "small": "https://hdh2.ucsd.edu/_images/johnsmarket/inside3Small.png",
          },
          Object {
            "caption": "Outside Johns Market",
            "large": "https://hdh2.ucsd.edu/_images/johnsmarket/outside1Large.png",
            "small": "https://hdh2.ucsd.edu/_images/johnsmarket/outside1Small.png",
          },
        ],
        "location": "Muir College, 1st Floor of Tamarack Apartments",
        "meals": null,
        "name": "Open 24 Hours",
        "paymentOptions": Array [
          "Cash",
          "Check",
        ],
        "persistentMenu": null,
        "regularHours": Object {
          "fri": "0000-2359",
          "mon": "0000-2359",
          "sat": null,
          "sun": null,
          "thu": "0000-2359",
          "tue": "0000-2359",
          "wed": "0000-2358",
        },
        "specialHours": null,
        "tel": "858.822.7729",
      },
    ]
  }
  id="dining"
  item="DiningItem"
  title="Dining"
/>
`;
